Start work on loading test question to structure.

--- a/files/history.txt
+++ b/files/history.txt
@@ -1,99 +1,120 @@
 Древнерусское государство образовалось на территории:
 Междуречья Рейна и Одера
 Балканского полуострова
-Восточноевропейской равнины +
+Восточноевропейской равнины
+
+3
 
 Какое божество в языческом пантеоне восточных славян отвечало за плодородие?
 Велес
-Ярило +
+Ярило
 Перун
+2
 
 Гостомысл – это:
 Князь, крестивший Русь
 Варяжский наемник
-Легендарный предводитель славян и предок Рюрика +
+Легендарный предводитель славян и предок Рюрика
+3
 
 Эпоха первых правителей Руси характеризовалась:
-Мощными центробежными и сепаратистскими тенденциями +
+Мощными центробежными и сепаратистскими тенденциями
 Становлением единоличной власти князя
 Отходом от языческих верований
+1
 
 Первая русская летопись называлась:
 Ипатьевская летопись
 Новгородская первая летопись
-Повесть временных лет +
+Повесть временных лет
+3
 
 Первый письменный свод законов Древней Руси назывался:
 ПСЗРИ
 Духовные грамоты
-Правда Ярослава +
+Правда Ярослава
+3
 
 Съезд в Любече закрепил:
-Окончательное закрепление феодальных порядков на территории Древнерусского государства +
+Окончательное закрепление феодальных порядков на территории Древнерусского государства
 Тенденции к консолидации представителей рода Рюриковичей
 Теологический характер государства
+1
 
 Первым московским князем был:
 Александр Ярославич
-Даниил Александрович +
+Даниил Александрович
 Юрий Владимирович
+2
 
 Битва на Калке состоялась в:
 1066 г.
-1223 г. +
+1223 г.
 1242 г.
+2
 
 Оборона Рязани состоялась в:
-1237 г. +
+1237 г.
 1380 г.
 1242 г.
+1
 
 Столица Золотой Орды:
 Киев
 Кашлык
-Сарай +
+Сарай
+3
 
 Иван Калита был:
-Женат на родственнице Великого хана +
+Женат на родственнице Великого хана
 Сторонником теологического государства
 Организатором антиордынского сопротивления
+1
 
 Куликовская битва состоялась:
 5 апреля 1242 г.
-9 сентября 1380 г. +
+9 сентября 1380 г.
 Февраль 1240 г.
+2
 
 Какой князь окончательно устранил режим «ордынского ига»?
-Иван III Великий +
+Иван III Великий
 Василий II Темный
 Дмитрий Донской
+1
 
 Венчание на царство Иоанна IV состоялось в:
-16 января 1547 г. +
+16 января 1547 г.
 3 января 1565 г.
 29 июля 1572 г.
+1
 
 Родовые владения русских бояр назывались:
 Феод
 Латифундия
-Вотчина +
+Вотчина
+3
 
 Ситуация, сложившаяся на начало XVII века в Русском царстве, характеризуется как:
-Династический кризис +
+Династический кризис
 Первоначальное накопление капитала
 Курс контрреформ
+1
 
 Родиной второго ополчения является:
 Смоленщина
 Великий Новгород
-Нижний Новгород +
+Нижний Новгород
+3
 
 Выберете произведение, описывающее окончание Смутного времени:
 «Хожение за три моря»
-«Жизнь за царя» +
+«Жизнь за царя»
 «Князь Серебряный»
+2
 
 Венчание на царство Михаила Романова произошло:
-21 июля 1613 г. +
+21 июля 1613 г.
 23 марта 1613 г.
 27 февраля 1617 г.
+1
