--- a/files/history.txt
+++ b/files/history.txt
@@ -1,120 +1,99 @@
 Древнерусское государство образовалось на территории:
-Междуречья Рейна и Одера
-Балканского полуострова
-Восточноевропейской равнины
-
-3
+*Междуречья Рейна и Одера
+*Балканского полуострова
+*Восточноевропейской равнины +
 
 Какое божество в языческом пантеоне восточных славян отвечало за плодородие?
-Велес
-Ярило
-Перун
-2
+*Велес
+*Ярило +
+*Перун
 
 Гостомысл – это:
-Князь, крестивший Русь
-Варяжский наемник
-Легендарный предводитель славян и предок Рюрика
-3
+*Князь, крестивший Русь
+*Варяжский наемник
+*Легендарный предводитель славян и предок Рюрика +
 
 Эпоха первых правителей Руси характеризовалась:
-Мощными центробежными и сепаратистскими тенденциями
-Становлением единоличной власти князя
-Отходом от языческих верований
-1
+*Мощными центробежными и сепаратистскими тенденциями +
+*Становлением единоличной власти князя
+*Отходом от языческих верований
 
 Первая русская летопись называлась:
-Ипатьевская летопись
-Новгородская первая летопись
-Повесть временных лет
-3
+*Ипатьевская летопись
+*Новгородская первая летопись
+*Повесть временных лет +
 
 Первый письменный свод законов Древней Руси назывался:
-ПСЗРИ
-Духовные грамоты
-Правда Ярослава
-3
+*ПСЗРИ
+*Духовные грамоты
+*Правда Ярослава +
 
 Съезд в Любече закрепил:
-Окончательное закрепление феодальных порядков на территории Древнерусского государства
-Тенденции к консолидации представителей рода Рюриковичей
-Теологический характер государства
-1
+*Окончательное закрепление феодальных порядков на территории Древнерусского государства +
+*Тенденции к консолидации представителей рода Рюриковичей
+*Теологический характер государства
 
 Первым московским князем был:
-Александр Ярославич
-Даниил Александрович
-Юрий Владимирович
-2
+*Александр Ярославич
+*Даниил Александрович +
+*Юрий Владимирович
 
 Битва на Калке состоялась в:
-1066 г.
-1223 г.
-1242 г.
-2
+*1066 г.
+*1223 г. +
+*1242 г.
 
 Оборона Рязани состоялась в:
-1237 г.
-1380 г.
-1242 г.
-1
+*1237 г. +
+*1380 г.
+*1242 г.
 
 Столица Золотой Орды:
-Киев
-Кашлык
-Сарай
-3
+*Киев
+*Кашлык
+*Сарай +
 
 Иван Калита был:
-Женат на родственнице Великого хана
-Сторонником теологического государства
-Организатором антиордынского сопротивления
-1
+*Женат на родственнице Великого хана +
+*Сторонником теологического государства
+*Организатором антиордынского сопротивления
 
 Куликовская битва состоялась:
-5 апреля 1242 г.
-9 сентября 1380 г.
-Февраль 1240 г.
-2
+*5 апреля 1242 г.
+*9 сентября 1380 г. +
+*Февраль 1240 г.
 
 Какой князь окончательно устранил режим «ордынского ига»?
-Иван III Великий
-Василий II Темный
-Дмитрий Донской
-1
+*Иван III Великий +
+*Василий II Темный
+*Дмитрий Донской
 
 Венчание на царство Иоанна IV состоялось в:
-16 января 1547 г.
-3 января 1565 г.
-29 июля 1572 г.
-1
+*16 января 1547 г. +
+*3 января 1565 г.
+*29 июля 1572 г.
 
 Родовые владения русских бояр назывались:
-Феод
-Латифундия
-Вотчина
-3
+*Феод
+*Латифундия
+*Вотчина +
 
 Ситуация, сложившаяся на начало XVII века в Русском царстве, характеризуется как:
-Династический кризис
-Первоначальное накопление капитала
-Курс контрреформ
-1
+*Династический кризис +
+*Первоначальное накопление капитала
+*Курс контрреформ
 
 Родиной второго ополчения является:
-Смоленщина
-Великий Новгород
-Нижний Новгород
-3
+*Смоленщина
+*Великий Новгород
+*Нижний Новгород +
 
 Выберете произведение, описывающее окончание Смутного времени:
-«Хожение за три моря»
-«Жизнь за царя»
-«Князь Серебряный»
-2
+*«Хожение за три моря»
+*«Жизнь за царя» +
+*«Князь Серебряный»
 
 Венчание на царство Михаила Романова произошло:
-21 июля 1613 г.
-23 марта 1613 г.
-27 февраля 1617 г.
-1
+*21 июля 1613 г. +
+*23 марта 1613 г.
+*27 февраля 1617 г.
